--- a/MyStock/Controls/Logo.xaml
+++ b/MyStock/Controls/Logo.xaml
@@ -19,41 +19,41 @@
         <Rectangle Grid.Row="0"
                    Grid.Column="0"
                    Margin="{Binding ItemsMargin}"
-                   Stroke="{DynamicResource PrimaryHueDarkBrush}"
+                   Stroke="{DynamicResource PrimaryHueMidBrush}"
                    StrokeThickness="{Binding Thickness}" />
         <Rectangle Grid.Row="1"
                    Grid.Column="0"
                    Margin="{Binding ItemsMargin}"
-                   Fill="{DynamicResource PrimaryHueDarkBrush}" />
+                   Fill="{DynamicResource PrimaryHueMidBrush}" />
         <Rectangle Grid.Row="2"
                    Grid.Column="0"
                    Margin="{Binding ItemsMargin}"
-                   Fill="{DynamicResource PrimaryHueDarkBrush}" />
+                   Fill="{DynamicResource PrimaryHueMidBrush}" />
         <Rectangle Grid.Row="0"
                    Grid.Column="1"
                    Margin="{Binding ItemsMargin}"
-                   Stroke="{DynamicResource PrimaryHueDarkBrush}"
+                   Stroke="{DynamicResource PrimaryHueMidBrush}"
                    StrokeThickness="{Binding Thickness}" />
         <Rectangle Grid.Row="1"
                    Grid.Column="1"
                    Margin="{Binding ItemsMargin}"
-                   Stroke="{DynamicResource PrimaryHueDarkBrush}"
+                   Stroke="{DynamicResource PrimaryHueMidBrush}"
                    StrokeThickness="{Binding Thickness}" />
         <Rectangle Grid.Row="2"
                    Grid.Column="1"
                    Margin="{Binding ItemsMargin}"
-                   Fill="{DynamicResource PrimaryHueDarkBrush}" />
+                   Fill="{DynamicResource PrimaryHueMidBrush}" />
         <Rectangle Grid.Row="0"
                    Grid.Column="2"
                    Margin="{Binding ItemsMargin}"
-                   Fill="{DynamicResource PrimaryHueDarkBrush}" />
+                   Fill="{DynamicResource PrimaryHueMidBrush}" />
         <Rectangle Grid.Row="1"
                    Grid.Column="2"
                    Margin="{Binding ItemsMargin}"
-                   Fill="{DynamicResource PrimaryHueDarkBrush}" />
+                   Fill="{DynamicResource PrimaryHueMidBrush}" />
         <Rectangle Grid.Row="2"
                    Grid.Column="2"
                    Margin="{Binding ItemsMargin}"
-                   Fill="{DynamicResource PrimaryHueDarkBrush}" />
+                   Fill="{DynamicResource PrimaryHueMidBrush}" />
     </Grid>
 </UserControl>
