--- a/MyStock/Pages/Products/ProductPage.xaml
+++ b/MyStock/Pages/Products/ProductPage.xaml
@@ -41,7 +41,7 @@
                             <RowDefinition Height="60" />
                             <RowDefinition Height="60" />
                             <RowDefinition Height="60" />
-                            <RowDefinition Height="60" />
+                            <RowDefinition Height="0" />
                             <RowDefinition Height="60" />
                             <RowDefinition Height="60" />
                             <RowDefinition Height="auto" />
@@ -82,12 +82,12 @@
                                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                                  Text="{Binding Code}" />
 
-                        <TextBox Grid.Row="5"
+                        <!--<TextBox Grid.Row="5"
                                  Margin="0,10"
                                  VerticalAlignment="Bottom"
                                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Cost}"
                                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                                 Text="{Binding Cost, StringFormat=C2, ConverterCulture={x:Static common:AppManager.CultureInfo}}" />
+                                 Text="{Binding Cost, StringFormat=C2, ConverterCulture={x:Static common:AppManager.CultureInfo}}" />-->
 
                         <TextBox Grid.Row="6"
                                  Margin="0,10"
