--- a/MyStock/Pages/Settings/SettingsPage.xaml
+++ b/MyStock/Pages/Settings/SettingsPage.xaml
@@ -2,10 +2,12 @@
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:common="clr-namespace:MyStock.Common"
+                xmlns:core="clr-namespace:MyStock.Core;assembly=MyStock.Core"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                 xmlns:domain="clr-namespace:MyStock.Domain;assembly=MyStock.Domain"
                 xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                 xmlns:langAsset="clr-namespace:MyStock.Application.Assets.Lang;assembly=MyStock.Application"
+                xmlns:local="clr-namespace:MyStock.Pages.Settings"
                 xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                 xmlns:materialDesign="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -24,64 +26,151 @@
         <TextBlock Margin="0,15,0,10"
                    Style="{DynamicResource MaterialDesignHeadline5TextBlock}"
                    Text="{x:Static langAsset:Translations.Settings}" />
-        <materialDesign:Card Grid.Row="1">
-            <TabControl Height="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=ActualHeight}" materialDesign:ColorZoneAssist.Mode="PrimaryDark">
-                <TabControl.Resources>
-                    <Style BasedOn="{StaticResource {x:Type TabItem}}" TargetType="{x:Type TabItem}">
-                        <Setter Property="mah:HeaderedControlHelper.HeaderFontSize" Value="{x:Static common:AppConfig.Header1FontSize}" />
-                    </Style>
-                </TabControl.Resources>
-                <TabItem Header="{x:Static langAsset:Translations.ProductCategories}">
-                    <Grid Margin="16">
-                        <Grid>
-                            <TreeView ItemsSource="{Binding ProductCategories}"
-                                      ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                                      ScrollViewer.VerticalScrollBarVisibility="Auto">
-                                <TreeView.ItemsPanel>
-                                    <ItemsPanelTemplate>
-                                        <StackPanel />
-                                    </ItemsPanelTemplate>
-                                </TreeView.ItemsPanel>
-                                <TreeView.ItemTemplate>
-                                    <HierarchicalDataTemplate DataType="{x:Type domain:ProductCategory}" ItemsSource="{Binding ChildCategories}">
-                                        <TextBlock Text="{Binding Name}" />
-                                    </HierarchicalDataTemplate>
-                                </TreeView.ItemTemplate>
-                            </TreeView>
+        <materialDesign:Card Grid.Row="1" Margin="0,0,0,10">
+            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                <TabControl materialDesign:ColorZoneAssist.Mode="PrimaryDark">
+                    <TabControl.Resources>
+                        <Style BasedOn="{StaticResource {x:Type TabItem}}" TargetType="{x:Type TabItem}">
+                            <Setter Property="mah:HeaderedControlHelper.HeaderFontSize" Value="{x:Static common:AppConfig.Header1FontSize}" />
+                        </Style>
+                    </TabControl.Resources>
+                    <TabItem Header="{x:Static langAsset:Translations.CommonSettings}">
+                        <Grid Margin="16">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="450" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                            </Grid.RowDefinitions>
+                            <TextBox Margin="0,0,0,10"
+                                     VerticalAlignment="Center"
+                                     materialDesign:HintAssist.Hint="Название магазина"
+                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                     Text="{Binding Source={x:Static common:AppManager.Settings}, Path=CompanyName}" />
+
+                            <TextBox Grid.Row="1"
+                                     Margin="0,0,0,10"
+                                     VerticalAlignment="Center"
+                                     materialDesign:HintAssist.Hint="Номер документа следующей продажи"
+                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                     Text="{Binding Source={x:Static common:AppManager.Settings}, Path=NextSalesDocNumber}" />
+
+                            <TextBox Grid.Row="2"
+                                     Margin="0,0,0,10"
+                                     VerticalAlignment="Center"
+                                     materialDesign:HintAssist.Hint="Номер документа следующей покупки"
+                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                     Text="{Binding Source={x:Static common:AppManager.Settings}, Path=NextPurchaseDocNumber}" />
+
+                            <StackPanel Grid.Row="3"
+                                        Margin="0,0,0,10"
+                                        Orientation="Horizontal">
+                                <ToggleButton Margin="0,0,10,0"
+                                              IsChecked="{Binding Source={x:Static common:AppManager.Settings}, Path=DefaultAnonymousCustomerOnNewSales}"
+                                              Style="{StaticResource MaterialDesignSwitchToggleButton}"
+                                              ToolTip="MaterialDesignSwitchToggleButton" />
+                                <TextBlock Text="Используйте общего клиента для новых продаж" />
+                            </StackPanel>
+
+                            <StackPanel Grid.Row="4"
+                                        Margin="0,0,0,10"
+                                        Orientation="Horizontal">
+                                <ToggleButton Margin="0,0,10,0"
+                                              IsChecked="{Binding Source={x:Static common:AppManager.Settings}, Path=DefaultAnonymousVendorOnNewPurchase}"
+                                              Style="{StaticResource MaterialDesignSwitchToggleButton}"
+                                              ToolTip="MaterialDesignSwitchToggleButton" />
+                                <TextBlock Text="Используйте общего поставщика для новых покупок" />
+                            </StackPanel>
                         </Grid>
-                    </Grid>
-                </TabItem>
-                <TabItem Header="{x:Static langAsset:Translations.ProductCategories}">
-                    <StackPanel Margin="16">
-                        <TextBlock Margin="0,0,0,8"
-                                   Style="{StaticResource MaterialDesignHeadline5TextBlock}"
-                                   Text="All Files" />
-                        <TextBlock>
-                            <Run Text="tab 1 content. Default look and behaviors." />
-                            <LineBreak />
-                            <LineBreak />
-                            <Run FontStyle="Italic">
-                                Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
-                            </Run>
-                        </TextBlock>
-                    </StackPanel>
-                </TabItem>
-                <TabItem Header="{x:Static langAsset:Translations.ProductCategories}">
-                    <StackPanel Margin="16">
-                        <TextBlock Margin="0,0,0,8"
-                                   Style="{StaticResource MaterialDesignHeadline5TextBlock}"
-                                   Text="All Files" />
-                        <TextBlock>
-                            <Run Text="tab 1 content. Default look and behaviors." />
-                            <LineBreak />
-                            <LineBreak />
-                            <Run FontStyle="Italic">
-                                Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
-                            </Run>
-                        </TextBlock>
-                    </StackPanel>
-                </TabItem>
-            </TabControl>
+                    </TabItem>
+                    <TabItem Header="{x:Static langAsset:Translations.Profile}">
+                        <Grid Margin="16" DataContext="{x:Static core:Global.CurrentUser}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="450" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                            </Grid.RowDefinitions>
+                            <TextBox x:Name="FirstName"
+                                     Grid.Row="1"
+                                     Margin="0,0,0,10"
+                                     VerticalAlignment="Center"
+                                     materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.FirstName}"
+                                     materialDesign:TextFieldAssist.HasClearButton="True"
+                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                     Text="{Binding FirstName, Mode=OneTime}" />
+
+                            <TextBox x:Name="LastName"
+                                     Margin="0,0,0,10"
+                                     VerticalAlignment="Center"
+                                     materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.LastName}"
+                                     materialDesign:TextFieldAssist.HasClearButton="True"
+                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                     Text="{Binding LastName, Mode=OneTime}" />
+
+                            <TextBox x:Name="MiddleName"
+                                     Grid.Row="2"
+                                     Margin="0,0,0,10"
+                                     VerticalAlignment="Center"
+                                     materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.MiddleName}"
+                                     materialDesign:TextFieldAssist.HasClearButton="True"
+                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                     Text="{Binding MiddleName, Mode=OneTime}" />
+
+                            <TextBox x:Name="Login"
+                                     Grid.Row="3"
+                                     Margin="0,0,0,10"
+                                     VerticalAlignment="Center"
+                                     materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.EnterUsername}"
+                                     materialDesign:TextFieldAssist.HasClearButton="True"
+                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                     Text="{Binding Login, Mode=OneTime}" />
+
+                            <PasswordBox x:Name="Password"
+                                         Grid.Row="4"
+                                         Margin="0,0,0,10"
+                                         VerticalAlignment="Center"
+                                         materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.EnterPassword}"
+                                         materialDesign:TextFieldAssist.HasClearButton="True" />
+
+                            <PasswordBox x:Name="ConfirmPassword"
+                                         Grid.Row="5"
+                                         Margin="0,0,0,10"
+                                         VerticalAlignment="Center"
+                                         materialDesign:HintAssist.Hint="Подтвердить пароль"
+                                         materialDesign:TextFieldAssist.HasClearButton="True" />
+
+                            <TextBlock x:Name="Error"
+                                       Grid.Row="6"
+                                       d:Text="Error message"
+                                       FontSize="{x:Static common:AppConfig.Header5FontSize}"
+                                       Foreground="#cc0000" />
+                            <StackPanel Grid.Row="7"
+                                        HorizontalAlignment="Right"
+                                        Orientation="Horizontal">
+                                <Button x:Name="UpdateUserInfo"
+                                        Click="UpdateUserInfo_Click"
+                                        Content="{x:Static langAsset:Translations.Save}" />
+                            </StackPanel>
+                        </Grid>
+                    </TabItem>
+                    <TabItem Header="{x:Static langAsset:Translations.Personalization}">
+                        <local:PersonalizationPage />
+                    </TabItem>
+                </TabControl>
+            </ScrollViewer>
         </materialDesign:Card>
     </Grid>
 </pages:BasePage>
