--- a/MyStock/Windows/MainWindow.xaml
+++ b/MyStock/Windows/MainWindow.xaml
@@ -2,25 +2,42 @@
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:common="clr-namespace:MyStock.Common"
+                 xmlns:core="clr-namespace:MyStock.Core;assembly=MyStock.Core"
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                  xmlns:localControls="clr-namespace:MyStock.Controls"
                  xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                  xmlns:materialDesign="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                  xmlns:viewmodels="clr-namespace:MyStock.ViewModels"
-                 Title="My stock"
                  MinWidth="600"
                  MinHeight="700"
                  d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
                  FontFamily="Segoe UI"
+                 GlowBrush="{DynamicResource PrimaryHueMidBrush}"
+                 NonActiveGlowBrush="{DynamicResource PrimaryHueLightBrush}"
+                 NonActiveWindowTitleBrush="{DynamicResource PrimaryHueLightBrush}"
                  Style="{StaticResource MaterialDesignWindow}"
                  TextElement.FontSize="{x:Static common:AppConfig.FontSize}"
                  WindowStartupLocation="CenterScreen"
                  WindowState="Maximized"
+                 WindowTitleBrush="{DynamicResource PrimaryHueMidBrush}"
                  mc:Ignorable="d">
+    <mah:MetroWindow.TitleTemplate>
+        <DataTemplate>
+            <Grid>
+                <TextBlock Margin="6,0"
+                           Padding="10,5,10,5"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           d:Text="My Stock"
+                           FontSize="18"
+                           Text="{Binding Source={x:Static common:AppManager.Settings}, Path=CompanyName}" />
+            </Grid>
+        </DataTemplate>
+    </mah:MetroWindow.TitleTemplate>
     <mah:MetroWindow.RightWindowCommands>
         <mah:WindowCommands>
-            <localControls:ThemeSwitcher />
+            <!--<localControls:ThemeSwitcher />
 
             <Button Background="{x:Null}"
                     BorderBrush="{x:Null}"
@@ -31,11 +48,24 @@
             </Button>
             <Button Background="{x:Null}"
                     BorderBrush="{x:Null}"
-                    Style="{StaticResource MaterialDesignFlatDarkBgButton}">
+                    Style="{StaticResource MaterialDesignFlatDarkBgButton}">-->
+            <Grid VerticalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
                 <materialDesign:PackIcon Width="21"
                                          Height="21"
                                          Kind="Account" />
-            </Button>
+                <TextBlock Grid.Column="1"
+                           Margin="5,0,0,0"
+                           HorizontalAlignment="Right"
+                           d:Text="My Stockdsadas"
+                           FontSize="{x:Static common:AppConfig.Header4FontSize}"
+                           Text="{Binding Source={x:Static core:Global.CurrentUser}, Path=FullName}" />
+            </Grid>
+
+            <!--</Button>-->
         </mah:WindowCommands>
     </mah:MetroWindow.RightWindowCommands>
     <materialDesign:DialogHost Identifier="RootDialog" SnackbarMessageQueue="{Binding ElementName=MainSnackbar, Path=MessageQueue}">
@@ -79,7 +109,7 @@
                                    FontSize="20"
                                    FontWeight="Medium"
                                    Foreground="{DynamicResource MaterialDesignDarkForeground}"
-                                   Text="{x:Static common:AppConfig.CompanyName}" />
+                                   Text="{Binding Source={x:Static common:AppManager.Settings}, Path=CompanyName}" />
                     </DataTemplate>
                 </mah:HamburgerMenu.HamburgerMenuHeaderTemplate>
                 <mah:HamburgerMenu.Content>
